--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Proyecto final</title>
     <script src="js/main.js" defer></script>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
         <div class="forms">
             <form action="" onsubmit="">
                 <h1 class="tt">Register</h1>
+                <div class="success"></div>
                 <input class="inputs" id="nombre" type="text" placeholder="Name" style="margin:0.3em;">
             <input class="inputs" id="edad" type="text" placeholder="Age" style="margin:0.3em;">
             <input class="inputs" id="email" type="email" placeholder="E-Mail" style="margin:0.3em;">
@@ -43,5 +45,6 @@
 <footer>
 
 </footer>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js" defer></script>
 </body>
 </html>
